# tbedit

./: .gitignore  Application.css  meson.build  package-lock.json  package.json
src/: Application.vala  Window.vala
src/Controllers/: TextBundleViewController.vala
src/Models/: TextBundle.vala
vapi/: config.vapi
